@startuml payroll
package "br.edu.idp.cc.poo.payroll" {

    abstract class Employee {
        - firstName : String
        - lastName : String
        - socialSecurityNumber : String
        + getFirstName() : String
        + getLastName() : String
        + getSocialSecurityNumber() : String
        + toString() : String
        + earnings() : double
    }

    class CommissionEmployee {
        - grossSales : double
        - commissionRate : double
        + CommissionEmployee(firstName : String, lastName : String, socialSecurityNumber : String, grossSales : double, commissionRate : double)
        + setGrossSales(grossSales : double) : void
        + getGrossSales() : double
        + setCommissionRate(commissionRate : double) : void
        + getCommissionRate() : double
        + earnings() : double
        + toString() : String
    }

    class BasePlusCommissionEmployee {
        - baseSalary : double
        + BasePlusCommissionEmployee(firstName : String, lastName : String, socialSecurityNumber : String, grossSales : double, commissionRate : double, baseSalary : double)
        + setBaseSalary(baseSalary : double) : void
        + getBaseSalary() : double
        + earnings() : double
        + toString() : String
    }

    class HourlyEmployee {
        - wage : double
        - hours : double
        + HourlyEmployee(firstName : String, lastName : String, socialSecurityNumber : String, wage : double, hours : double)
        + setWage(wage : double) : void
        + getWage() : double
        + setHours(hours : double) : void
        + getHours() : double
        + earnings() : double
        + toString() : String
    }

    class SalariedEmployee {
        - weeklySalary : double
        + SalariedEmployee(firstName : String, lastName : String, socialSecurityNumber : String, weeklySalary : double)
        + setWeeklySalary(weeklySalary : double) : void
        + getWeeklySalary() : double
        + earnings() : double
        + toString() : String
    }

    Employee <|-- CommissionEmployee
    CommissionEmployee <|-- BasePlusCommissionEmployee
    Employee <|-- HourlyEmployee
    Employee <|-- SalariedEmployee
}
@enduml